
 * Single click on blog entry in the main list now shows details of the entry and provides editing capability same as the "Edit Post" context command.
 
 * Single click on the location longitude,latitude text will open up the visual location editor.

 * Now uses Google Play Services API, which takes care of power usage and provides a Fused location provider for updating location info.
   The new Location API handles power and accuracy on its own. So we no longer can shut it off by looking at the provider type, instead, we just keep updating the location for a brief amount of time - around 15 seconds or so.
   After that, the updater is shut off to conserve battery.

 * There is no Retry Location fix anymore, to avoid complexity. The new Location Api should give a pretty good location fix fast, and user can always edit the location on a map.
  
 * Fixed reported issue#2 kml file format now correctly adds the xmlns attribute to kml tag and not the Document tag.

 * Minimum Android version: Android 2.3.3 (Gingerbread and newer).
   Required SDK Version is now 10 (was 4).  Google Play Services (to display maps, get location updates using the Fused provider) requires Android 2.2+.
   See http://developer.android.com/google/play-services/setup.html
   Also using android-support-v4.jar for android.support.v4.app.Fragment which is needed for SupportMapFragment usage. Necessary to support Android SDK versions older than 12.
   http://developer.android.com/tools/support-library/setup.html

Version 1.7
===========
August 2011

 * The first open-sourced version, where adverts are removed.
   Any further releases will be documented here: http://code.google.com/p/travel-blog-android/

Version 1.6
===========
 * TimeStamp in kml so animation can be done in Google Earth.
 * Fixed format of date/time so it matches your phone's settings and locale.
 * Fixed Force Close when viewing map with no points.

Version 1.51
===========
 * Fixed edit and delete posts.