@@ -46,8 +46,7 @@
         -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBXvuyGT1W85epkj9Rr0Z3i19iwo0lNBK8"
-            />
+            android:value="AIzaSyBXvuyGT1W85epkj9Rr0Z3i19iwo0lNBK8" />
 
         <activity
             android:name="com.barkside.travellocblog.TravelLocBlogMain"
@@ -74,6 +73,9 @@
         <activity
             android:name="com.barkside.travellocblog.AboutActivity"
             android:label="@string/app_name" />
-    </application>
+        <activity
+            android:name="com.barkside.travellocblog.SettingsActivity"
+            android:label="@string/app_name" />
+        </application>
 
 </manifest>
