@@ -40,7 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:hint="@string/name"
         android:maxLines="1"
         android:paddingBottom="2dp"
         android:paddingLeft="5dp"
