@@ -15,10 +15,10 @@
     <item android:id="@+id/new_trip"
           android:icon="@drawable/ic_menu_add"
           android:title="@string/menu_new" />      
+    <item android:id="@+id/settings"
+          android:orderInCategory="100"
+          android:title="@string/menu_settings"/>
     <item android:id="@+id/help"
           android:icon="@drawable/ic_menu_help"
           android:title="@string/menu_help" />
-    <item android:id="@+id/about"
-          android:orderInCategory="100"
-          android:title="@string/menu_about"/>
 </menu>
