@@ -13,22 +13,23 @@
     <!-- Menu title -->
 
     <!-- Labels -->
-    <string name="name">Name:</string>
-    <string name="description">Description:</string>
-    <string name="location">Location Status:</string>
-    <string name="location_store">Reapply Location</string>
-    <string name="location_edit">Show on map</string>
+    <string name="note_name_hint">Enter title</string>
+    <string name="note_desc_hint">Enter description</string>
+
     <string name="save">Save</string>
     <string name="save_location">Use Location</string>
     <string name="cancel">Cancel</string>
+
     <string name="date_store">Reapply Timestamp</string>
-    <string name="location_again">Retry Location Fix</string>
+
     <string name="new_post">New Post</string>
     <string name="default_trip">MyFirstTrip.kml</string>
+
     <string name="menu_open">Open Trip</string>
     <string name="menu_new">New Trip</string>
     <string name="menu_info">Trip Info</string>
     <string name="menu_help">Help</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="new_trip_dialog_text">Please enter new trip filename:</string>
     <string name="OK">OK</string>
@@ -36,7 +37,7 @@
     <string name="done">Done</string>
     <string name="file_suffix">.kml</string>
     <string name="file_name_hint">Filename</string>
-    <string name="menu_send">Send Trip</string>
+    <string name="menu_send">Share Trip</string>
     <string name="menu_map">Map Trip</string>
     <string name="are_you_sure">Are you sure?</string>
     <string name="are_you_sure_msg">Are you sure you want to delete this post?</string>
@@ -44,14 +45,27 @@
     <string name="about_name_version_format">%1$s (Version %2$s)</string>
     <string name="about_notices_label">COPYRIGHT NOTICES</string>
 
-    <!-- Messages -->
-    <string name="help_intro">Travel Blog takes notes that are tagged with the location and the time the note was written.\n
-Click here for the full <a href="https://code.google.com/p/travel-blog-android/wiki/UserGuide">User Guide</a>.\n</string>
+    <!-- Settings (Preferences) strings -->
+    <string name="location_duration">Location fix duration</string>
+    <string name="location_duration_summary">How long to listen for location updates. This activity consumes battery.</string>
+    <string name="default_desc_title">Create default description</string>
+    <string name="default_desc_on">Enter current date as first line of the description in a new note.</string>
+    <string name="default_desc_off">Leave new note default description blank</string>
+    <string name="about_settings_title">ABOUT</string>
+    <string name="about_menu_title">About Travel Blog</string>
+    <string name="general_settings_title">GENERAL SETTINGS</string>
 
-    <string name="help_message">To use, first start with New Trip from the menu.  This will be the KML filename of the blog (located in /TravelBlog/ on your SD card). Now when you want to log your location, just click on New Post.
+    <!-- Messages -->
+    <string name="help_intro">Travel Blog is an app for taking notes that are tagged with the note location and timestamp.\n
+The full <a href="https://code.google.com/p/travel-blog-android/wiki/UserGuide">User Guide</a>.\n</string>
+
+    <string name="help_message">The New Trip menu command starts a new trip. This will be the KML filename of the blog (located in /TravelBlog/ on your SD card).\n
+Click on New Post when you want to log your location.
 This brings up a new page where you can type a name and description.  While you are typing, it finds your location by GPS (if enabled and available), or by WiFi / Cell-id (network).  If you are need to modify the location, you can later edit the location on a map.\n
 \n
-Now click Save, or Cancel to cancel. You can edit a post by clicking on it, and you can select delete post by long-clicking on a post. When editing you a given the opportunity to edit the name and description, and optionally to edit the location of your post by clicking on the location coordinates.\n
+To complete, click Save or Cancel as needed.
+You can edit a post by clicking on it, and you can delete a post by long-clicking on a post and selecting the delete command.
+When editing you a given the opportunity to edit the name and description, and optionally to edit the location of your post by clicking on the location coordinates.\n
 \n
 Whenever you choose, you can view your trip on a Google map on your device by choosing Map Trip from the menu.  You can copy the KML blog file manually to do what you choose with it, or you can send it via email or wherever your device can send it to by choosing Send Trip from the menu.\n
 \n
@@ -62,10 +76,9 @@ Later you can Open Trip to load old trips, or select new Trip again to start aga
 \nHappy travelling!\n
 \nThe Travel Blog Team</string>
 
-    <string name="about_message">A Travel Locations Blog<br/>\n
-<a href="https://code.google.com/p/travel-blog-android/">Source Code</a>\n
+    <string name="about_message">A Travel Location Notes App<br/>\n
+<a href="https://code.google.com/p/travel-blog-android/">Source Code and Docs</a>\n
 <a href="https://play.google.com/store/apps/details?id=com.barkside.travellocblog">Google Play Store</a>\n
-<a href="https://groups.google.com/forum/travel-blog-android/">Mailing List</a>\n
 Copyright 2011 Barkside Apps</string>
 
 </resources>
