@@ -127,22 +127,11 @@ public class TripMapView extends FragmentActivity {
 
    private void addMarkersToMap() {
       /*
-      TODO: run this in a thread, yielding ever so often, otherwise, UI
-      thread may be blocked for too long if adding 100s of markers.
-      
-      new Thread() { // Or use AsyncThread
-         public void run() {
-            for (int i = 0; i < size; i++) {
-               runOnUiThread(new Runnable() {
-                  public void run() {
-                     mMap.addMarker(new MarkerOptions() .position(...);
-                     mMarkerIndexes.put(m.getId(), i);
-                  }
-               });
-                     Thread.sleep(5);
-            }
-         }
-      }.start(); 
+      Maybe TODO: run this in a thread, yielding ever so often, otherwise, UI
+      thread may be blocked for too long if adding 1000s of markers.
+      Tested with 300-900 markers on a 2011 phone, and that seems to be fine.
+      For large number of notes, saving the file is probably a bigger issuse than this.
+      Use new Thread() and runOnUiThread or use AsyncThread for loading markers, if needed.
     */
 
       LatLngBounds.Builder bounds = new LatLngBounds.Builder();
