@@ -16,8 +16,11 @@ September 2013
  * Single click on the location longitude,latitude text will open up the visual location editor.
 
  * Now uses Google Play Services API, which takes care of power usage and provides a Fused location provider for updating location info.
-   The new Location API handles power and accuracy on its own. So we no longer can shut it off by looking at the provider type, instead, we just keep updating the location for a brief amount of time - around 15 seconds or so.
+   The new Location API handles power and accuracy on its own. So we no can longer shut it off by looking at the provider type, instead, we just keep updating the location for a brief amount of time that can be set by the user.
    After that, the updater is shut off to conserve battery.
+
+ * Added Setting menu option to allow user preference settings.
+   Current settings include how long should new notes look for location updates, and whether to create default descriptions with current date and time for a new note. 
 
  * There is no Retry Location fix anymore, to avoid complexity. The new Location Api should give a pretty good location fix fast, and user can always edit the location on a map.
   
